--- a/site/404.html
+++ b/site/404.html
@@ -28,6 +28,18 @@
 
                 <!-- Expanded navigation -->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
+                        <!-- Main navigation -->
+                        <ul class="nav navbar-nav">
+                            <li class="navitem">
+                                <a href="/." class="nav-link">Home</a>
+                            </li>
+                            <li class="navitem">
+                                <a href="/about/" class="nav-link">About</a>
+                            </li>
+                            <li class="navitem">
+                                <a href="/people/" class="nav-link">People</a>
+                            </li>
+                        </ul>
 
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
