--- a/site/index.html
+++ b/site/index.html
@@ -28,6 +28,18 @@
 
                 <!-- Expanded navigation -->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
+                        <!-- Main navigation -->
+                        <ul class="nav navbar-nav">
+                            <li class="navitem active">
+                                <a href="." class="nav-link">Home</a>
+                            </li>
+                            <li class="navitem">
+                                <a href="about/" class="nav-link">About</a>
+                            </li>
+                            <li class="navitem">
+                                <a href="people/" class="nav-link">People</a>
+                            </li>
+                        </ul>
 
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
@@ -35,6 +47,16 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
+                            <li class="nav-item">
+                                <a rel="prev" class="nav-link disabled">
+                                    <i class="fa fa-arrow-left"></i> Previous
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a rel="next" href="about/" class="nav-link">
+                                    Next <i class="fa fa-arrow-right"></i>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a href="https://github.com/PGxAfrica/PGxAfrica.github.io/edit/master/docs/index.md" class="nav-link">Edit on PGxAfrica.github.io
                                     </a>
@@ -144,5 +166,5 @@
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-03-06 09:54:28.983743+00:00
+Build Date UTC : 2024-03-06 09:58:58.329507+00:00
 -->
